src/objects/ExperiencePackage_Component__c.object
<CustomObject>
    <description>Junction object between ExperiencePackage and Component</description>
    <fields>
        <fullName>Component_Type__c</fullName>
        <label>Component Type</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <label>Component</label>
        <referenceTo>Components__c</referenceTo>
        <relationshipLabel>Experience Packages</relationshipLabel>
        <relationshipName>ExperiencePackageComponents</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cost_CWV1__c</fullName>
        <formula>Component__r.Cost_CWV__c</formula>
        <label>Cost_CWV1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_CWV__c</fullName>
        <label>Cost (CWV)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Opp__c</fullName>
        <label>Cost (Opp)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Experience_Package__c</fullName>
        <label>Experience Package</label>
        <referenceTo>ExperiencePackage__c</referenceTo>
        <relationshipLabel>Components</relationshipLabel>
        <relationshipName>ExperiencePackageComponents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>ExperiencePackage_Component</label>
    <nameField>
        <displayFormat>ExpPkgComp-{000000}</displayFormat>
        <label>ExperiencePackage_Component Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ExperiencePackage_Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>